--- a/index.html
+++ b/index.html
@@ -141,6 +141,10 @@
                         <button class="addToCart">Add to Cart</button>
                     </td>
                 </tr>
+            </table>
+            <br>
+            <hr>
+            <table class="productContainer">
                 <!-- 5th Row -->
                 <tr>
                     <td>
