--- a/About_Us.html
+++ b/About_Us.html
@@ -6,7 +6,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="css/style.css" rel="stylesheet">
         <style>
-            background-color=""
+            body{
+                background-color:#F8EDED;
+            }
         </style>
     </head>
     <body>
